tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_config_option_update.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──
• Model set to Large
── viewport ──


›

  Agent · Large                                            ⌃o Settings
