tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_current_mode_update.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──
• Mode changed to Code
── viewport ──

› Ask Agent anything
  ⏎ send · ⇧⏎ newline · ⇧⇥ mode · ⌃O settings · ⌃C quit     Agent · Code
