tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_plan.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──
• Plan
  ✔ Reproduce the failure
  ◐ Fix the parser
  □ Add a regression test
── viewport ──

› Ask Agent anything
  ⏎ send · ⇧⏎ newline · ⌃C quit                                    Agent
