tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_session_info_update.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──

── viewport ──

› Ask Agent anything
  ⏎ send · ⇧⏎ newline · ⌃C quit        Fix the flaky parser test · Agent
