tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_tool_call.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──

── viewport ──

◐ Search for TODOs  search
  └ src

○ Edit main.rs  edit


› Ask Agent to do anything

  Agent · /repo
