tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_tool_call_update.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──
• Explored
  └ Read Cargo.toml

• Edited src/lib.rs (+1 -0)
    2 +fn b() {}
── viewport ──

• Run tests
  └ running 3 tests
    FAILED parser::empty


› Ask Agent to do anything

  Agent
