tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_usage_update.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──

── viewport ──


›

  Agent · 24%
