tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_user_message_chunk.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──
› fix the build

› and add a test
── viewport ──

› Ask Agent anything
  ⏎ send · ⇧⏎ newline · ⌃C quit                                    Agent
